force-app/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__AlcoholRecipientType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AlcoholRecipientType__c</fullName>
    <label>Alcohol Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CONSUMER</fullName>
            </value>
            <value>
                <fullName>LICENSEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>