force-app/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__BsoCompany__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__BsoCompany__c</fullName>
    <label>BSO Company</label>
    <length>35</length>
    <type>Text</type>
</CustomField>