force-app/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__BsoPostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__BsoPostalCode__c</fullName>
    <label>BSO Zip/Postal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>