force-app/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__BsoTaxId__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__BsoTaxId__c</fullName>
    <label>BSO Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>