force-app/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__CodContactTaxId__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CodContactTaxId__c</fullName>
    <label>COD Collection Contact Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>