force-app/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__CodState__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CodState__c</fullName>
    <label>COD Collection State/Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>