force-app/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__HalState__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__HalState__c</fullName>
    <label>FedEx Location State/Province</label>
    <length>14</length>
    <type>Text</type>
</CustomField>