force-app/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__HalStreet__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__HalStreet__c</fullName>
    <label>FedEx Location Street</label>
    <type>TextArea</type>
</CustomField>