force-app/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__InsuredType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__InsuredType__c</fullName>
    <label>Insured Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>