force-app/main/default/objects/zkmulti__MCShipment_Special_Services__c/fields/zkmulti__IntlReturnCustomsReturnType__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IntlReturnCustomsReturnType__c</fullName>
    <label>Intl Return Customs Return Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>